<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dmvio_ros2</name>
  <version>0.0.1</version>
  <description>ROS2 driver for DM-VIO: Delayed Marginalization Visual-Inertial Odometry</description>

  <maintainer email="qinqiaomeng@outlook.com">Qiaomeng Qin</maintainer>
  <license>GPLv3</license> <url type="website">https://vision.in.tum.de/dm-vio</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>cv_bridge</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend> <depend>image_transport</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>

  <build_depend>rosidl_default_generators</build_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export><build_type>ament_cmake</build_type></export>
</package>